--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,7 +27,7 @@
               </div>
               <!-- Navbar Right Side -->
               <div class="navbar-nav">
-                <a class="nav-item nav-link" href="{{ url_for('#') }}">temp placeholder</a>
+                <a class="nav-item nav-link" href="{{ url_for('home') }}">temp placeholder</a>
               </div>
             </div>
           </div>
