--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,18 +1,88 @@
 {% extends "base.html" %}
 
     {% block jumbotron %}
-        <div class="jumbotron">
-            <div class="container mt-5">
-                <h1 class="text-center">Lack the savory flavor of fresh, traditional Indian food? </h1>
-                <p class="lead"><h3 class="text-center" style="padding-top: 20px;">My Tiffin is here for you! Order today!</h3></p>
-                <hr class="my-4">
-            </div>
-        </div>
     {% endblock jumbotron %}
 
     
     {% block main_content %}
-    
+    {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+          {% for category, message in messages %}
+          {% if extra_margin_above_flash_message %}  
+            <br>
+            <br>
+            <br>
+            <br>
+            <div class="container text-center alert alert-{{ category }}">
+               {{ message }}
+            </div>
+            {% else %}
+              <div class="container text-center alert alert-{{ category }}">
+                {{ message }}
+              </div>
+            {% endif %}
+          {% endfor %}
+      {% endif %}
+    {% endwith %}
+        <div style="padding-top: 90px;">
+            <h2>Middle School Grade Calculator</h2>
+            <hr>
+            <div style="padding-left: 0px; padding-right: 0px; padding-bottom: 0px; padding-top: 40px;">
+                <form method="POST" action="" enctype="multipart/form-data">
+                    {{ form.hidden_tag() }}
+                    <fieldset class="form-group">
+                        <legend class="border-bottom mb-4">
+                            Formative and Summative Grade Weight
+                        </legend>
+                        <div class="form-group">
+                            {{ form.formative_weight.label(class="form-control-label") }}
+                            {% if form.formative_weight.errors %}
+                                {{ form.formative_weight(class="form-control form-control-lg is-invalid") }}
+                                <div class="invalid-feedback">
+                                    {% for error in form.formative_weight.errors %}
+                                        <span>{{ error }}</span>
+                                    {% endfor %}
+                                </div>
+                            {% else %}
+                                {{ form.formative_weight(class="form-control form-control-lg") }}
+                            {% endif %}
+                            <small class="text-muted">For example, 40.</small>
+                        </div>
+                        <div class="form-group">
+                            {{ form.summative_weight.label(class="form-control-label") }}
+                            {% if form.summative_weight.errors %}
+                                {{ form.summative_weight(class="form-control form-control-lg is-invalid") }}
+                                <div class="invalid-feedback">
+                                    {% for error in form.summative_weight.errors %}
+                                        <span>{{ error }}</span>
+                                    {% endfor %}
+                                </div>
+                            {% else %}
+                                {{ form.summative_weight(class="form-control form-control-lg") }}
+                            {% endif %}
+                            <small class="text-muted">For example, 60.</small>
+                        </div>
+                        <div class="form-group">
+                            {{ form.total_number_of_assignments.label(class="form-control-label") }}
+                            {% if form.total_number_of_assignments.errors %}
+                                {{ form.total_number_of_assignments(class="form-control form-control-lg is-invalid") }}
+                                <div class="invalid-feedback">
+                                    {% for error in form.total_number_of_assignments.errors %}
+                                        <span>{{ error }}</span>
+                                    {% endfor %}
+                                </div>
+                            {% else %}
+                                {{ form.total_number_of_assignments(class="form-control form-control-lg") }}
+                            {% endif %}
+                            <small class="text-muted">This number may not exceed 20.</small>
+                        </div>
+                    </fieldset>
+                    <div class="form-group">
+                        {{ form.submit(class="btn btn-info") }}
+                    </div>
+                </form>
+            </div>
+        </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
